# codemagic

./: Cargo.toml  Dioxus.toml
src/: main.rs
