[package]
name = "codemagic"
version = "0.1.0"
authors = ["DioxusGrow <dioxusgrow@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "31d72db", features = [] }
dioxus-logger = "0.5.1"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
